# backend/routes/notificationRoutes.js
@@ -1,0 +1,7 @@
+const express = require('express');
+const { getUserNotifications } = require('../controllers/notificationController');
+const router = express.Router();
+
+router.get('/', getUserNotifications);
+
+module.exports = router;
